Fix some bugs and make it run